--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -25,6 +25,7 @@
     "jwt-decode": "^4.0.0",
     "ng2-charts": "^8.0.0",
     "rxjs": "~7.8.0",
+    "sweetalert2": "^11.26.17",
     "tslib": "^2.8.0",
     "zone.js": "~0.15.0"
   },
